// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit Form Dropdown when confidential renders on or off text based on confidentiality 1`] = `
<div
  class="dropdown show"
  toggleform="function () {}"
  updateconfidentialattribute="function () {}"
>
  <div
    class="dropdown-menu sidebar-item-warning-message"
  >
    <div>
      <p>
        <gl-sprintf-stub
          message="You are going to turn off the confidentiality. This means %{strongStart}everyone%{strongEnd} will be able to see and leave a comment on this %{issuableType}."
        />
      </p>
       
      <edit-form-buttons-stub
        confidential="true"
        fullpath=""
      />
    </div>
  </div>
</div>
`;

exports[`Edit Form Dropdown when not confidential renders "You are going to turn on the confidentiality." in the  1`] = `
<div
  class="dropdown show"
  toggleform="function () {}"
  updateconfidentialattribute="function () {}"
>
  <div
    class="dropdown-menu sidebar-item-warning-message"
  >
    <div>
      <p>
        <gl-sprintf-stub
          message="You are going to turn on the confidentiality. This means that only team members with %{strongStart}at least Reporter access%{strongEnd} are able to see and leave comments on the %{issuableType}."
        />
      </p>
       
      <edit-form-buttons-stub
        fullpath=""
      />
    </div>
  </div>
</div>
`;
